# lib_cvgutils

./: CMakeLists.txt
src/include/: cvg_random.h  matrixLib.h  xmlfilereader.h
src/include/control/: CompFilter1.h  Controller_MidLevel_controlModes.h  DMC.h  Filter.h  FilteredDerivative.h  filtered_derivative_wcb.h
src/include/drone_utils/: drone_state_command_enum.h  drone_state_enum.h
src/matlab/dmc_configuration/: matrix_config_DMC.m  parametros.txt
src/matlab/dmc_design/: DMC_AltSpeedController.mdl  PID_AltSpeedController.mdl  Simulacion_variando_Kfriccion.m  Simulacion_variando_masa.m  Simulacion_variando_tr.m  matricesDMC.m  modelo.m
src/source/: DMC_configuration_file_creator.cpp  DMC_test_suite.cpp  circular_buffer_example.cpp  code_tests.cpp  cvg_random.cpp  matrixLib.cpp  pruebastaticbool.cpp
src/source/control/: CompFilter1.cpp  DMC.cpp  Filter.cpp  PID.cpp  filtered_derivative_wcb.cpp
